[update]: modify global styles for scrollbar, update layout to correctly reference social media data, and enhance hotel booking components with additional parameters for check-in, check-out, and guest counts; improve hotel card and list components to preserve booking query parameters.

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -273,13 +273,13 @@ body {
 }
 
 *::-webkit-scrollbar-track {
-  background: #fff;
+  background: #00804d;
 }
 
 *::-webkit-scrollbar-thumb {
-  background-color: #00804d;
+  background-color: #fdf4ed;
   border-radius: 9999px;
-  border: 2px solid #fff;
+  border: 2px solid #00804d;
 }
 
 *::-webkit-scrollbar-thumb:hover {
